--- a/product-preview-card-component-main/styles.css
+++ b/product-preview-card-component-main/styles.css
@@ -49,10 +49,12 @@ body {
   height: 100%;
   width: 50%;
   margin: auto;
+  object-fit: cover;
 }
 .img-container img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .info-container {
